Update meta tags and contact link in index.html

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="トリイクは、ECで買った自分宛の荷物を、当社が運営する「トリイク スポット」へ取り行く度、Amazoギフト券がもらえる新サービス！​">
-    <meta property="og:title" content="トリイク | 新しいポイ活サービス">
-    <meta property="og:description" content="ECで買った自分宛の荷物を、当社が運営する「トリイク スポット」へ取り行く度、Amazoギフト券がもらえる新サービス！​。">
+    <meta name="description" content="トリイクは、国土交通省の補助対象事業者として開発した“無人の荷物受け取りスポット”​">
+    <meta property="og:title" content="トリイク | 無人の荷物受け取りスポット">
+    <meta property="og:description" content="トリイク│国土交通省の補助対象事業者として開発した“無人の荷物受け取りスポット”">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -51,7 +51,7 @@
                 <a href="#flow">導入の流れ</a>
                 <a href="#faq">よくある質問</a>
             </nav>
-            <a class="corp-contact-btn" href="https://everywill-jp.com/contact/" target="_blank" rel="noopener">マンション管理組会様はこちら</a>
+            <a class="corp-contact-btn" href="https://m-board.toriiku-jp.com/" target="_blank" rel="noopener">マンション管理組会様はこちら</a>
         </header>
     </div>
 
