Update company link to external URL

--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
     <section class="section section-lightblue footermenu1">
         <div class="container" style="text-align: center;">
             <div class="">
-                <a href="#">会社概要</a>｜
+                <a href="https://everywill-jp.com/company/"target="_blank">会社概要</a>｜
                 <a href="https://toriiku-jp.com/" target="_blank">トリイクサービスサイト</a>
             </div>
             
