--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css" type="text/css">
-    <title>宅配トラブル いつまで見過ごしますか？| トリイク</title>
+    <title>放置された宅配問題。入居者の不満と試算を直撃。| トリイク</title>
 </head>
 <body>
     <!-- Header -->
