Add keywords meta tag to index.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta name="googlebot" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="トリイクは、国土交通省の補助対象事業者として開発した“無人の荷物受け取りスポット”​">
+    <meta name="keywords" content="トリイク, EC,ネットショッピング, 配送,置き配, 再配達, Amazon, 楽天,荷物受け取りサービス,荷物受取,荷物受取スポット,荷物受け取りスポット,宅配ボックス,宅配トラブル,盗難,資産価値,空室,空室率,入居率,不動産オーナー,賃貸物件オーナー,賃貸物件,賃貸収入,不動産運用,不動産管理会社,オートロック">
     <meta property="og:title" content="トリイク | 無人の荷物受け取りスポット">
     <meta property="og:description" content="トリイク│国土交通省の補助対象事業者として開発した“無人の荷物受け取りスポット”">
     <meta property="og:type" content="website">
