Update alt text for hero image in index.html

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <picture>
                 <source media="(max-width: 768px)" srcset="./img/heroimg_sp.jpg">
                 <source media="(min-width: 769px)" srcset="./img/heroimg.jpg">
-                <img src="./img/heroimg.jpg" alt="宅配トラブルいつまで見過ごしますか?">
+                <img src="./img/heroimg.jpg" alt="放置された宅配問題。入居者の不満と資産を直撃。">
             </picture>
     </section>
     
