--- a/index.html
+++ b/index.html
@@ -491,14 +491,34 @@
     <footer class="section section-blue footermenu2">
         <div class="container" style="text-align: center;">
             
-            <div class="cta-buttons">
-                  <a href="#"><div class="cta-button todocument"> <img src="./img/icon_document.png" alt="資料アイコン"><a href="https://docs.google.com/forms/d/e/1FAIpQLScYgTKGPaoVYAS6N2Qtw3VmuFlZ3hOBIRh-YN1naqV8LT-kjg/viewform?usp=header" target="_blank">資料請求</div></a>
-                <a href="#"><div class="cta-button"> <img src="./img/icon_calender.png" alt="カレンダーアイコン"><a href="https://timerex.net/s/tomomi.ishido.926_8c3c/4afb3883" target="_blank">個別相談</div></a>
-                <a href="tel:09082792219"><div class="cta-button totel"><span class = "telno">090-8279-2219</span>電話相談</div></a>
-            </div>
-            
-        </div>
-    </footer>
+            <footer class="section section-blue footermenu2">
+  <div class="container" style="text-align: center;">
+    <div class="cta-buttons">
+
+      <!-- 資料請求 -->
+      <a class="cta-button todocument"
+         href="https://docs.google.com/forms/d/e/1FAIpQLScYgTKGPaoVYAS6N2Qtw3VmuFlZ3hOBIRh-YN1naqV8LT-kjg/viewform?usp=header"
+         target="_blank" rel="noopener">
+        <img src="./img/icon_document.png" alt="資料アイコン">
+        資料請求
+      </a>
+
+      <!-- 個別相談 -->
+      <a class="cta-button"
+         href="https://timerex.net/s/tomomi.ishido.926_8c3c/4afb3883"
+         target="_blank" rel="noopener">
+        <img src="./img/icon_calender.png" alt="カレンダーアイコン">
+        個別相談
+      </a>
+
+      <!-- 電話相談（ここはそのままでOKですが整形例） -->
+      <a class="cta-button totel" href="tel:09082792219">
+        <span class="telno">090-8279-2219</span>電話相談
+      </a>
+
+    </div>
+  </div>
+</footer>
 
 <script>
 let slideIndex = 0;
