--- a/index.html
+++ b/index.html
@@ -98,8 +98,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <img src="./img/toriiku.png" alt="トリイク">
          </div>
         
-        <h3 class = "orangetxt">国交省と共に開発した<br class = "spbr">“トリイク”が、<br class = "spbr">この問題を解決します!!</h3>
-    
+        <h3 class = "orangetxt">国交省と共に開発した<br class = "spbr">“トリイク”が、<br class = "spbr">この問題を解決します!!*</h3>
+    <p class="tyusyaku">
+    *参照元：
+    <a href="https://takuhai-poc.jp/" target="_blank" rel="noopener">
+      多様な受取方法等の普及促進実証事業の公募開始 | 国土交通省
+    </a>
+  </p>
     </section>
 
     <!-- Problem Section -->
