--- a/index.html
+++ b/index.html
@@ -154,7 +154,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="stats-number">５.４%</div>
             </div>
             </div>
-            <p class = "sankoinfo">参考：CBCNews 2025年7月</p>
+            <p class="reference">参考：
+  　　　　　<a href="https://newsdig.tbs.co.jp/articles/cbc/2035178?page=2" target="_blank" rel="noopener">CBCNews 2025年7月</a>
+　　　　　　</p>
             </div>
             
             <h3 class="orangebox">国内の「宅配ルール」が変わり<br class = "spbr">置き配が標準化される今<br>マンションには安心かつ便利な<br class = "spbr">「宅配設備」が求められています</h2>
