--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </tr>
                         <tr>
                             <td class="row-header">満杯問題</td>
-                            <td>荷物の<br class = "spbr">発生しやすい<br><span class = "kakko">（ボックス容量に制限）</span><span class="neutral">△</span></td>
+                            <td><br class = "spbr">満杯で再配達が発生<br><span class = "kakko"></span><span class="neutral">△</span></td>
                             <td class="fortoriiku"><strong>実質なし<br><span class = "kakko">（棚管理・回転率高い）</strong></span><span class="good">○</span></td>
                         </tr>
                         <tr>
