--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
             </div>
 
-                <h3 class="boxtext">宅配ボックスは設置費用が高い上、<br class = "spbr">満杯・盗難・誤操作などの不満が残り、<br>結果的に退去理由にも。<br><br>一方、トリイクは宅配ストレスの解消に<br class = "spbr">加えポイント付与もあり、住民満足度が<br>上がるため定着率の向上が期待できます。</h3>
+                <h3 class="boxtext">宅配ボックスは高額な設置費用がかかる上、<br class = "spbr">満杯による利用不可やオーナー・管理会社が対応すべきトラブル負担といった不満が残り、<br>結果的に退去理由につながるケースも。<br><br>一方、トリイクはこれらの宅配ストレスを解消し、<br class = "spbr">さらにポイント付与もあり、住民満足度が上がるため定着率の向上が期待できます。</h3>
         
     </section>
 
