--- a/index.html
+++ b/index.html
@@ -270,16 +270,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <img alt="" class="full" src="./img/spotimg.png">
         </div>
         <div class="lead-text">
-          <strong>・築20年の賃貸マンションの空きスペースへ導入</strong><br>
+          <strong>・築20年の賃貸物件の空きスペースへ導入</strong><br>
           <strong>・導入コスト</strong>:宅配ボックスの<span>1/3</span><br>
-          <strong>・再配達率</strong> <span>9.5% → 0%</span><br>
-          <strong>・</strong>住民アンケート<strong>「便利・安心」</strong><span>94%</span><br>
-          <strong>・入居率 </strong><span>70% → 90%</span>(3ヶ月)
+          <strong>・再配達率</strong> <span>25% → 0%</span><br>
+          <strong>・置き配トラブル(盗難・誤配)</strong><span>月4～6件 → 0件</span><br>
+          <strong>・空率率 </strong><span>15% → 10%</span>(半年)
         </div>
       </div>
       <div class="voice-comment">
         <div class="voice-header">オーナーコメント</div>
-        <p>宅配環境が改善されて住民からの不満が減りました。<br>これまで宅配ボックスが設置できず競争力に不安がありましたが、小さな空き区画の活用だけで入居率が上がり、物件価値の維持にもつながっています。</p>
+        <p>正直、最初は宅配トラブルなんて大したことないと思っていました。<br>けれどEveryWiLLさんの話を聞いて、いま宅配がいかに入居者満足に直結しているかを知り、導入を決断しました。 導入後はトラブルも減り、近隣物件との差別化にもなって、入居率も上がりました。</p>
       </div>
       <div class="voice-comment">
         <div class="voice-header">住民コメント</div>
