--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <p class="tyusyaku">
     *参照元：
     <a href="https://takuhai-poc.jp/" target="_blank" rel="noopener">
-      多様な受取方法等の普及促進実証事業の公募開始 | 国土交通省
+      多様な受取方法等の普及促進実証事業
     </a>
   </p>
     </section>
