--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <a href="#flow">導入の流れ</a>
                 <a href="#faq">よくある質問</a>
             </nav>
-            <a class="corp-contact-btn" href="https://m-board.toriiku-jp.com/" target="_blank" rel="noopener">マンション管理組会様はこちら</a>
+            <a class="corp-contact-btn" href="https://m-board.toriiku-jp.com/" target="_blank" rel="noopener">マンション管理組合様はこちら</a>
         </header>
     </div>
 
