--- a/index.html
+++ b/index.html
@@ -154,8 +154,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="stats-number">５.４%</div>
             </div>
             </div>
-            <p class="reference">参考：
-  　　　　　<a href="https://newsdig.tbs.co.jp/articles/cbc/2035178?page=2" target="_blank" rel="noopener">CBCNews 2025年7月</a>
+            <p class="reference">参考：<a href="https://newsdig.tbs.co.jp/articles/cbc/2035178?page=2" target="_blank" rel="noopener">CBCNews 2025年7月</a>
 　　　　　　</p>
             </div>
             
