--- a/index.html
+++ b/index.html
@@ -497,6 +497,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         はい、24時間利用可能です。騒音が出る作りではなく、棚から荷物を取るだけなので近隣の迷惑になりません。
                     </p>
                 </div>
+                    <div class="faq-item">
+                    <div class="faq-question">
+                        <span>導入コストや月額費は、どれぐらいかかりますか？</span>
+                    </div>
+                    <p class="faq-answer">
+                        設置規模・データ連携範囲によって異なります。まずは無料診断をお願いします。
+                    </p>
                 
                 </div>
                 
