--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
          href="https://docs.google.com/forms/d/e/1FAIpQLScYgTKGPaoVYAS6N2Qtw3VmuFlZ3hOBIRh-YN1naqV8LT-kjg/viewform?usp=header"
          target="_blank" rel="noopener">
         <img src="./img/icon_document.png" alt="資料アイコン">
-        資料請求
+        資料プレゼント
       </a>
 
       <!-- 個別相談 -->
@@ -543,7 +543,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
          href="https://timerex.net/s/tomomi.ishido.926_8c3c/4afb3883"
          target="_blank" rel="noopener">
         <img src="./img/icon_calender.png" alt="カレンダーアイコン">
-        個別相談
+        無料診断
       </a>
 
       <!-- 電話相談（ここはそのままでOKですが整形例） -->
