--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <p style="margin-top: 30px;"><strong>“空室が増える前”になる前に、確かな選択を。</strong></p>
                 <p style="margin-top: 30px;"> 住環境の質が問われてしまう今こそ、
 <br>行動のタイミングです。</p>
-                <p style="margin-top: 30px;">興味ご関心がありましたら、<br>無料のオンライン相談、資料請求をお気軽に！</p>
+                <p style="margin-top: 30px;">興味ご関心がありましたら、<br>無料のオンライン相談、資料プレゼント！</p>
                 </div>
                 <div class="flexlistimg">
                     <img src="./img/30up.png" alt="予約数30件UP">
