--- a/index.html
+++ b/index.html
@@ -528,6 +528,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             
             <footer class="section section-blue footermenu2">
   <div class="container" style="text-align: center;">
+　<div class="container" style="text-align: center;">
+  <div class="cta-topline">＼年末感謝祭！12月のご相談で特別プランあり／</div>
     <div class="cta-buttons">
 
       <!-- 資料請求 -->
