--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <span>設置後のトラブル（盗難・誤配など）が起きた場合は？</span>
                     </div>
                     <p class="faq-answer">
-                        カメラ映像や入退室履歴をもとに、トリイク運営側で迅速に調査・対応します。</br>設置以降の監視・サポート体制を整備しており、オーナー様や管理会社に個別対応をお願いすることはありません。
+                        カメラ映像や入退室履歴をもとに、トリイク運営側で迅速に調査・対応します。</br>設置以降の監視・サポート体制を整備しており、オーナー様や管理会社が個別対応をお願いすることはありません。
                     </p>
                 </div>
                 
@@ -485,7 +485,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <span>利用する住民は、どうやって荷物を受け取るのですか？</span>
                     </div>
                     <p class="faq-answer">
-                        荷物の受け取りは非常に簡単です。</br>・通知: 荷物がトリイクスポットに届くと、トリイクから保管通知が届きます。</br>・受取：通知を確認後、24時間いつでも好きなタイミングでスポットの入口で「QRコード」を読み取るだけで入室でき、すぐに自分の荷物を受け取れます。　</br>・受取後：トリイクから住民へポイントが付与されます。</br>※トリイクの会員登録・利用方法も簡単で、幅広い年齢層の方に利用されています。
+                        荷物の受け取りは非常に簡単です。</br>・通知: 荷物がトリイクスポットに届くと、トリイクから荷物保管通知が届きます。</br>・受取：通知を確認後、スポットが開いている好きなタイミングで、スポットの入口にある「QRコード」を読み取るだけで入室でき、荷物を受け取れます。　</br>・受取後：トリイクから住民へポイントが付与されます。</br>※トリイクの会員登録・利用方法も簡単で、幅広い年齢層の方に利用されています。
                     </p>
                 </div>
                 
@@ -494,8 +494,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <span>夜間や深夜でも住民が利用して問題ありませんか？</span>
                     </div>
                     <p class="faq-answer">
-                        はい、24時間利用可能です。騒音が出る作りではなく、棚から荷物を取るだけなので近隣の迷惑になりません。
-                    </p>
+                        集合住宅のルールに合わせて、利用可能な時間帯を柔軟に設定できます。住民はスポットの入口にある「QRコード」を読み取るだけで入室でき、荷物を受け取れます。</p>
                 </div>
                     <div class="faq-item">
                     <div class="faq-question">
