--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <span>導入コストや月額費は、どれぐらいかかりますか？</span>
                     </div>
                     <p class="faq-answer">
-                        設置規模・データ連携範囲によって異なります。まずは無料診断をお願いします。
+                        設置規模によって異なります。まずは無料診断をお願いします。
                     </p>
                 
                 </div>
