--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <span>設置後のトラブル（盗難・誤配など）が起きた場合は？</span>
                     </div>
                     <p class="faq-answer">
-                        カメラ映像や入退室履歴をもとに、トリイク運営側で迅速に調査・対応します。</br>設置以降の監視・サポート体制を整備しており、オーナー様や管理会社が個別対応をお願いすることはありません。
+                        カメラ映像や入退室履歴をもとに、トリイク運営側で迅速に調査・対応します。</br>設置以降の監視・サポート体制を整備しており、オーナーや管理会社が個別対応をお願いすることはありません。
                     </p>
                 </div>
                 
