--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="toriiku-info">
             <div class="feature-list">
                 <div class="feature-item">2坪のスペースがあればどこでも導入可能</div>
-                <div class="feature-item">宅配トラブルは迅速にトリイクがすべて対応</div>
+                <div class="feature-item">手間ゼロ！拠点運営・トラブル対応を代行</div>
                 <div class="feature-item">監視カメラや認証機器で荷物を常時管理</div>
                 <div class="feature-item">収容容積が大きく、再配達が生じない</div>
                 <div class="feature-item">利用者にポイント還元</div>
