--- a/index.html
+++ b/index.html
@@ -495,6 +495,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <p class="faq-answer">
                         集合住宅のルールに合わせて、利用可能な時間帯を柔軟に設定できます。住民はスポットの入口にある「QRコード」を読み取るだけで入室でき、荷物を受け取れます。</p>
+               
+                </div>
+                 <div class="faq-item">
+                    <div class="faq-question">
+                        <span>導入にあたって、オーナーや管理会社が毎日行う操作や作業はありますか？</span>
+                    </div>
+                    <p class="faq-answer">
+                        原則として、オーナーや管理会社に行っていただくデイリーの操作はございません。</p>
+   
                 </div>
                     <div class="faq-item">
                     <div class="faq-question">
