--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
             </div>
 
-                 <h3 class="boxtext">宅配ボックスは高額な設置費用がかかる上、<br><br class = "spbr">満杯による利用不可やオーナー・管理会社が対応すべきトラブル負担といった不満が残り、<br>結果的に退去理由につながるケースも。<br><br>一方、トリイクはこれらの宅配ストレスを解消し、<br><br class = "spbr">さらにポイント付与もあり、住民満足度が上がるため定着率の向上が期待できます。</h3>
+                 <h3 class="boxtext">宅配ボックスは高額な設置費用がかかる上、<br><br class = "spbr">満杯によるクレームや使いづらいなどの不満が積み重なり、物件への満足度が低下。<br>結果的に退去理由につながるケースも。<br><br>一方、トリイクはこれらの宅配ストレスを解消し、<br><br class = "spbr">さらにポイント付与もあり、住民満足度が上がるため定着率の向上が期待できます。</h3>
         
     </section>
 
