--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <span>利用する住民は、どうやって荷物を受け取るのですか？</span>
                     </div>
                     <p class="faq-answer">
-                        荷物の受け取りは非常に簡単です。</br>・通知: 荷物がトリイクスポットに届くと、トリイクから荷物保管通知が届きます。</br>・受取：通知を確認後、スポットが開いている好きなタイミングで、スポットの入口にある「QRコード」を読み取るだけで入室でき、荷物を受け取れます。　</br>・受取後：トリイクから住民へポイントが付与されます。</br>※トリイクの会員登録・利用方法も簡単で、幅広い年齢層の方に利用されています。
+                        荷物の受け取りは非常に簡単です。</br>・通知：荷物がトリイクスポットに届くと、トリイクから荷物保管通知が届きます。</br>・受取：通知を確認後、スポットが開いている好きなタイミングで、スポットの入口にある「QRコード」を読み取るだけで入室でき、荷物を受け取れます。　</br>・受取後：トリイクから住民へポイントが付与されます。</br>※トリイクの会員登録・利用方法も簡単で、幅広い年齢層の方に利用されています。
                     </p>
                 </div>
                 
