--- a/index.html
+++ b/index.html
@@ -503,7 +503,23 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <p class="faq-answer">
                         原則として、オーナーや管理会社に行っていただくデイリーの操作はございません。</p>
-   
+
+                    
+                      <div class="faq-item">
+                    <div class="faq-question">
+                        <span>スペースはどのくらい必要ですか？</span>
+                    </div>
+                    <p class="faq-answer">
+                        約2〜3坪で設置可能です。</p>
+                </div>
+
+                      <div class="faq-item">
+                    <div class="faq-question">
+                        <span>屋内、屋外どちらでも設置可能ですか？</span>
+                    </div>
+                    <p class="faq-answer">
+                        屋内、屋外どちらでも設置可能です。</p>
+            
                 </div>
                     <div class="faq-item">
                     <div class="faq-question">
