--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="faq-answer">
                         原則として、オーナーや管理会社に行っていただくデイリーの操作はございません。</p>
 
-                    
+                      </div>
                       <div class="faq-item">
                     <div class="faq-question">
                         <span>スペースはどのくらい必要ですか？</span>
