--- a/index.html
+++ b/index.html
@@ -81,12 +81,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <!-- Hero Section -->
     <section class="hero">
-            <picture>
-                <source media="(max-width: 768px)" srcset="./img/heroimg_sp.jpg">
-                <source media="(min-width: 769px)" srcset="./img/heroimg.jpg">
-                <img src="./img/heroimg.jpg" alt="放置された宅配問題。入居者の不満と資産を直撃。">
-            </picture>
-    </section>
+  <picture>
+    <source media="(max-width: 768px)" srcset="./img/heroimg_sp.jpg">
+    <source media="(min-width: 769px)" srcset="./img/heroimg.jpg">
+    <img src="./img/heroimg.jpg" alt="放置された宅配問題。入居者の不満と資産を直撃。">
+  </picture>
+
+  <a class="hero-cta"
+     href="https://forms.gle/5s77JwFiMUSLwezw6"
+     target="_blank"
+     rel="noopener">
+    資料請求・お問合せ <span class="hero-cta-arrow">→</span>
+  </a>
+</section>
+
     
     <section class="section maininfo" style = "background-image: url(./img/bg_city.jpg);">
         <h2 class="mb0">置き配盗難・再配達の増加等の宅配トラブル。</h2>
