--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- Hero Section -->
     <section class="hero">
   <picture>
-    <source media="(max-width: 768px)" srcset="./img/heroimg_sp.jpg">
-    <source media="(min-width: 769px)" srcset="./img/heroimg.jpg">
-    <img src="./img/heroimg.jpg" alt="放置された宅配問題。入居者の不満と資産を直撃。">
+    <source media="(max-width: 768px)" srcset="./img/heroimg_sp.png">
+    <source media="(min-width: 769px)" srcset="./img/heroimg.png">
+    <img src="./img/heroimg.png" alt="放置された宅配問題。入居者の不満と資産を直撃。">
   </picture>
 
   <a class="hero-cta"
