--- a/index.html
+++ b/index.html
@@ -79,21 +79,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
 
 
-    <!-- Hero Section -->
-    <section class="hero">
-  <picture>
-    <source media="(max-width: 768px)" srcset="./img/heroimg_sp.png">
-    <source media="(min-width: 769px)" srcset="./img/heroimg.png">
-    <img src="./img/heroimg.png" alt="放置された宅配問題。入居者の不満と資産を直撃。">
-  </picture>
-
-  <a class="hero-cta"
+ <!-- Hero Section -->
+<section class="hero">
+  <a class="hero-link"
      href="https://forms.gle/5s77JwFiMUSLwezw6"
      target="_blank"
-     rel="noopener">
-    資料請求・お問合せ <span class="hero-cta-arrow">→</span>
+     rel="noopener"
+     aria-label="資料請求・お問合せフォームへ">
+    <picture>
+      <source media="(max-width: 768px)" srcset="./img/heroimg_sp.png">
+      <source media="(min-width: 769px)" srcset="./img/heroimg.png">
+      <img src="./img/heroimg.png" alt="放置された宅配問題。入居者の不満と資産を直撃。">
+    </picture>
   </a>
 </section>
+
 
     
     <section class="section maininfo" style = "background-image: url(./img/bg_city.jpg);">
