--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
             
             
-                <h3 class = "boxtext orangetxt">トリイクとは、国土交通省と連携し、開発した*<br><span class="pconly">安心＆便利な</span><span class="sponly">安心安全な</span>「宅配荷物の無人受取りスポット」<span class="pconly">です。</span></h3>
+                <h3 class = "boxtext orangetxt">トリイクとは、国土交通省と連携し開発した*<br><span class="pconly">安心＆便利な</span><span class="sponly">安心安全な</span>「宅配荷物の無人受取りスポット」<span class="pconly">です。</span></h3>
          <p class="tyusyaku">
     *
     <a href="https://takuhai-poc.jp/" target="_blank" rel="noopener">
