--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="toriiku-info">
             <div class="feature-list">
                 <div class="feature-item">導入費用が宅配ボックスより安価！</div>
-                <div class="feature-item">2坪のスペースがあれば屋内外問わずどこでも導入可​</div>
+                <div class="feature-item">2坪のスペースで屋内外問わずどこでも導入可​</div>
                 <div class="feature-item">手間ゼロ！拠点運営・トラブル対応を代行</div>
                 <div class="feature-item">監視カメラや認証機器で荷物を常時管理</div>
                 <div class="feature-item">収容容積が大きく、再配達が生じない</div>
