--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </tr>
                         <tr>
                             <td class="row-header">再配達発生</td>
-                            <td><br class = "spbr">すぐ満杯になり再配達が頻発生​<br><span class = "kakko"></span><span class="neutral">△</span></td>
+                            <td><br class = "spbr">すぐ満杯になり再配達が頻発​<br><span class = "kakko"></span><span class="neutral">△</span></td>
                             <td class="fortoriiku"><strong>発生しない<br><span class = "kakko">(収容容積が大きい)​</strong></span><span class="good">○</span></td>
                         </tr>
                         <tr>
