--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
       <div class="voice-comment">
         <div class="voice-header">住民コメント</div>
-        <p>再配達や置き配トラブルを気にせず生活できるのは嬉しいです。<br>しかも、自分のタイミングで荷物が受け取れるため、トリイクがある物件に住めて良かったと感じています。<br>今後トリイクが増えたら、物件選びの軸にもなると思います。<br>また、トリイクは利用の都度、電子ポイントを得ることができるので、クセになります。これぞ、物件の差別化に繋がると思います。​</p>
+        <p>再配達や置き配トラブルを気にせず生活できるのは嬉しいです。<br>しかも、自分のタイミングで荷物が受け取れるため、トリイクがある物件に住めて良かったと感じています。<br>今後トリイクが増えたら、物件選びの軸にもなると思います。<br>また、トリイクは利用の都度、電子ポイントを得ることができるのでクセになります。これぞ、物件の差別化に繋がると思います。​</p>
       </div>
     </div>
   </div>
