--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <span>導入コストや月額費は、どれぐらいかかりますか？</span>
                     </div>
                     <p class="faq-answer">
-                        設置場所や集合住宅の規模により異なります。また、物件の資産価値向上に向けた多彩なプランを用意していますので、プランによっても異なります。まずは、無料診断をお願いします。​
+                        設置場所や集合住宅の規模により異なります。<br>また、物件の資産価値向上に向けた多彩なプランを用意していますので、プランによっても異なります。まずは、無料診断をお願いします。​
                     </p>
                 
                 </div>
