--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
             </div>
 
-                 <h3 class="boxtext">宅配ボックスは高額な設置費用がかかる上、<br><br class = "spbr">満杯によるクレームや使いづらいなどの不満が積み重なり、物件への満足度が低下。<br>結果的に退去理由につながるケースも。<br><br>一方、トリイクはこれらの宅配ストレスを解消し、<br><br class = "spbr">さらにポイント付与もあり、住民満足度が上がるため空室率の低下が期待できます。</h3>
+                 <h3 class="boxtext">宅配ボックスは高額な設置費用がかかる上、<br><br class = "spbr">満杯によるクレームや使いづらいなどの<br class = "spbr">不満が積み重なり、物件への満足度が低下。<br>結果的に退去理由につながるケースも。<br><br>一方、トリイクはこれらの宅配ストレスを解消し、<br><br class = "spbr">さらにポイント付与もあり、住民満足度が上がるため<br class = "spbr">空室率の低下が期待できます。</h3>
         
     </section>
 
@@ -331,7 +331,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     
     </div>
 <div class="voice-card">
-      <div class="voice-header">2坪の空きスペースにトリイクを設置することで、<br class="spbr">宅配トラブル０＆空室率改善を実現！​</div>
+      <div class="voice-header">2坪の空きスペースに<br class = "spbr">トリイクを設置することで、<br class="spbr">宅配トラブル０＆空室率改善を実現！​</div>
       <div class="flexbox">
         <div class="spotimg">
           <img alt="" class="full" src="./img/spotimg.png">
@@ -341,7 +341,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <strong>・導入コスト</strong>:宅配ボックスの<span>1/3</span><br>
           <strong>・再配達率</strong> <span>25% → 0%</span><br>
           <strong>・置き配トラブル(盗難・誤配)</strong><span>月4～6件 → 0件</span><br>
-          <strong>・空率率 </strong><span>15% → 10%</span>(半年)
+          <strong>・空室率 </strong><span>15% → 10%</span>(半年)
         </div>
       </div>
       <div class="voice-comment">
@@ -424,7 +424,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="step-number-num">5</div>
                     </div>
                     <div class="step-content">
-                        <h3>利用開始（運用はすべてトリイク運営会社で対応）</h3>
+                        <h3>利用開始<br class = "spbr">（運用はすべてトリイク運営会社で対応）</h3>
                     </div>
                 </div>
             </div>
