--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css" type="text/css">
-    <title>放置された宅配問題。入居者の不満と資産を直撃。| トリイク</title>
+    <title>放置された宅配問題。入居者の不満が高まり資産を直撃。| トリイク</title>
 </head>
 <body>
     
@@ -89,14 +89,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <picture>
       <source media="(max-width: 768px)" srcset="./img/heroimg_sp.png">
       <source media="(min-width: 769px)" srcset="./img/heroimg.png">
-      <img src="./img/heroimg.png" alt="放置された宅配問題。入居者の不満と資産を直撃。">
+      <img src="./img/heroimg.png" alt="放置された宅配問題。入居者の不満が高まり資産を直撃。">
     </picture>
   </a>
 </section>
 
-
-    
-    <section class="section maininfo" style = "background-image: url(./img/bg_city.jpg);">
         <h2 class="mb0">置き配盗難・再配達の増加等の宅配トラブル。</h2>
         <h2 class="mb0">見過ごしてきた日常の不満は、<br class = "spbr">いま“退去理由”へと変わり、<br>さらに 物件探しの候補から外される理由にも<span class="pconly">なっています</span>。</h2>
         <h2 class="">2026年～国内の宅配ルールが変わる中、​<br class = "spbr">宅配設備が不十分な物件は、<br> 空室率の上昇 → 物件の資産価値の下落や<br class = "spbr">賃料収入の低下へ繋がります。</h2>
