--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </picture>
   </a>
 </section>
-
+<h3 class = "boxtext">
         <h2 class="mb0">置き配盗難・再配達の増加等の宅配トラブル。</h2>
         <h2 class="mb0">見過ごしてきた日常の不満は、<br class = "spbr">いま“退去理由”へと変わり、<br>さらに 物件探しの候補から外される理由にも<span class="pconly">なっています</span>。</h2>
         <h2 class="">2026年～国内の宅配ルールが変わる中、​<br class = "spbr">宅配設備が不十分な物件は、<br> 空室率の上昇 → 物件の資産価値の下落や<br class = "spbr">賃料収入の低下へ繋がります。</h2>
@@ -110,6 +110,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       多様な受取方法等の普及促進事業|国土交通省​
     </a>
   </p>
+    </h3>
     </section>
 
     <!-- Problem Section -->
