--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <strong>・導入コスト</strong>:宅配ボックスの<span>1/3</span><br>
           <strong>・再配達率</strong> <span>25% → 0%</span><br>
           <strong>・置き配トラブル(盗難・誤配)</strong><span>月4～6件 → 0件</span><br>
-          <strong>・空率率 </strong><span>15% → 10%</span>(半年)
+          <strong>・空室率 </strong><span>15% → 10%</span>(半年)
         </div>
       </div>
       <div class="voice-comment">
