--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
     
-    <section class="section maininfo" style = "background-image: url(./img/bg_city.jpg);">
+    <section class="section maininfo">
         <h2 class="mb0">置き配盗難・再配達の増加等の宅配トラブル。</h2>
         <h2 class="mb0">見過ごしてきた日常の不満は、<br class = "spbr">いま“退去理由”へと変わり、<br>さらに 物件探しの候補から外される理由にも<span class="pconly">なっています</span>。</h2>
         <h2 class="">2026年～国内の宅配ルールが変わる中、​<br class = "spbr">宅配設備が不十分な物件は、<br> 空室率の上昇 → 物件の資産価値の下落や<br class = "spbr">賃料収入の低下へ繋がります。</h2>
