Fix anchor tag formatting in index.html

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <h3 class = "orangetxt">国土交通省と共に開発した<br class = "spbr">“トリイク”が、<br class = "spbr">この問題を解決します!!*</h3>
     <p class="tyusyaku">
     *
-    <a href="https://takuhai-poc.jp/" target="_blank" rel="noopener">
+   <a href="https://takuhai-poc.jp/" target="_blank" rel="noopener">
       多様な受取方法等の普及促進事業|国土交通省​
     </a>
   </p>
@@ -187,9 +187,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
          <p class="tyusyaku">
     *
     <a href="https://takuhai-poc.jp/" target="_blank" rel="noopener">
-      多様な受取方法等の普及促進事業|国土交通省​
-    </a>
-  </p>
+      多様な受取方法等の普及促進事業|国土交通省​</a></p>
 </h3>
         
             <div class="container">
