--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     
     </div>
 <div class="voice-card">
-      <div class="voice-header">2坪の空きスペースにトリイクを設置することで、<br class="spbr">宅配トラブル０＆空室率改善を実現！​</div>
+      <div class="voice-header">2坪の空きスペースに<br class = "spbr">トリイクを設置することで、<br class="spbr">宅配トラブル０＆空室率改善を実現！​</div>
       <div class="flexbox">
         <div class="spotimg">
           <img alt="" class="full" src="./img/spotimg.png">
