--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
       <div class="voice-comment">
         <div class="voice-header">オーナーコメント</div>
-        <p>正直、最初は宅配トラブルなんて大したことないと思っていました。<br>けれどEveryWiLLさんの話を聞いて、いま宅配がいかに入居者満足に直結しているかを知り、導入を決断しました。 導入後はトラブルも減り、近隣物件との差別化にもなって、空室率も上がりました。</p>
+        <p>正直、最初は宅配トラブルなんて大したことないと思っていました。<br>けれどEveryWiLLさんの話を聞いて、いま宅配がいかに入居者満足に直結しているかを知り、導入を決断しました。 導入後はトラブルも減り、近隣物件との差別化にもなって、空室率も改善しました。</p>
       </div>
       <div class="voice-comment">
         <div class="voice-header">住民コメント</div>
