--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <span>夜間や深夜でも居住者が利用して問題ありませんか？</span>
                     </div>
                     <p class="faq-answer">
-                        集合住宅のルールに合わせて、利用可能な運営時間を柔軟に設定できます。居住者はスポットの入口にある「QRコード」を読み取るだけで入室でき、荷物を受け取ることができます。</p>
+                        集合住宅のルールに合わせて、利用可能な運営時間を柔軟に設定できます。</br>居住者はスポットの入口にある「QRコード」を読み取るだけで入室でき、荷物を受け取ることができます。</p>
                
                 </div>
                  <div class="faq-item">
@@ -535,7 +535,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <span>導入コストや月額費は、どれぐらいかかりますか？</span>
                     </div>
                     <p class="faq-answer">
-                        設置場所や集合住宅の規模により異なります。また、物件の資産価値向上に向けた多彩なプランを用意していますので、プランによっても異なります。まずは、無料診断をお願いします。​
+                        設置場所や集合住宅の規模により異なります。</br>また、物件の資産価値向上に向けた多彩なプランを用意していますので、プランによっても異なります。</br>まずは、無料診断をお願いします。​
                     </p>
                 
                 </div>
