--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
    <!-- Contact CTA Section -->
 <footer class="section section-blue footermenu2">
   <div class="container" style="text-align: center;">
-    <div class="cta-topline">＼年末感謝祭！12月のご相談で特別プランあり／</div>
+    <div class="cta-topline">＼年始特別！1月のご相談で特別プランあり／</div>
 
     <div class="cta-buttons">
       <a class="cta-button todocument"
