--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@ function gtag_report_conversion(url) {
   gtag('event', 'conversion', {'send_to': 'AW-17353402160/o7vNCPjd2dUbELDO39JA'});
 </script>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-15E3PZQEE4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-15E3PZQEE4');
+</script>
+
 
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
