--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
          href="https://docs.google.com/forms/d/e/1FAIpQLScYgTKGPaoVYAS6N2Qtw3VmuFlZ3hOBIRh-YN1naqV8LT-kjg/viewform?usp=header"
          target="_blank" rel="noopener">
         <img src="./img/icon_document.png" alt="資料アイコン">
-        資料プレゼント
+        資料請求
       </a>
 
       <a class="cta-button"
