--- a/index.html
+++ b/index.html
@@ -142,17 +142,40 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </a>
 </section>
 
+<section class="intro2026" id="introduction">
+  <div class="intro2026__inner">
 
+    <h2 class="intro2026__title">2026年 宅配ルールが変わる</h2>
+
+    <div class="intro2026__cards">
+
+      <!-- 配送現場の変化 -->
+      <article class="intro2026__card">
+        <div class="intro2026__imgWrap">
+          <img src="./img/introduction1.png" alt="配送現場の変化">
+        </div>
+      </article>
+
+      <!-- 入居者の行動 -->
+      <article class="intro2026__card">
+        <div class="intro2026__imgWrap">
+          <img src="./img/introduction2.png" alt="入居者の行動">
+        </div>
+      </article>
+
+    </div>
+
+    <div class="intro2026__bottom">
+      <div class="intro2026__bottomTitle">空室対策 ＝ 宅配インフラの整備。</div>
+      <p class="intro2026__bottomText">
+        家賃を下げる前に、入居者が去る「原因」を断つ。それが、資産価値を守る唯一の道です。
+      </p>
+    </div>
+
+  </div>
+</section>
     
     <section class="section maininfo">
-        <h2 class="mb0">置き配盗難・再配達の増加等の宅配トラブル。</h2>
-        <h2 class="mb0">見過ごしてきた日常の不満は、<br class = "spbr">いま“退去理由”へと変わり、<br>さらに 物件探しの候補から外される理由にも<span class="pconly">なっています</span>。</h2>
-        <h2 class="">2026年～国内の宅配ルールが変わる中、​<br class = "spbr">宅配設備が不十分な物件は、<br> 空室率の上昇 → 物件の資産価値の下落や<br class = "spbr">賃料収入の低下へ繋がります。</h2>
-         <div class="bannerwrapper">
-            <img src="./img/kokudo.png" alt="国土交通省">
-            <img src="./img/shakehand.png" alt="握手" class="shakehandimg">
-            <img src="./img/toriiku.png" alt="トリイク">
-         </div>
         
         <h3 class = "orangetxt">国土交通省と共に開発した<br class = "spbr">“トリイク”が、<br class = "spbr">この問題を解決します!!*</h3>
     <p class="tyusyaku">
