--- a/index.html
+++ b/index.html
@@ -174,17 +174,26 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
   </div>
 </section>
-    
-    <section class="section maininfo">
-        
-        <h3 class = "orangetxt">国土交通省と共に開発した<br class = "spbr">“トリイク”が、<br class = "spbr">この問題を解決します!!*</h3>
-    <p class="tyusyaku">
+
+<section class="section maininfo">
+
+  <!-- ▼ここにロゴ列を戻す -->
+  <div class="maininfo-logos">
+    <img src="./img/mlit_logo.png" alt="国土交通省ロゴ" class="logo-mlit">
+    <img src="./img/hand.png" alt="つながりイラスト" class="logo-hand">
+    <img src="./img/toriiku_logo.png" alt="トリイクロゴ" class="logo-toriiku">
+  </div>
+
+  <h3 class="orangetxt">国土交通省と共に開発した<br class="spbr">“トリイク”が、<br class="spbr">この問題を解決します!!*</h3>
+
+  <p class="tyusyaku">
     *
-   <a href="https://takuhai-poc.jp/" target="_blank" rel="noopener">
+    <a href="https://takuhai-poc.jp/" target="_blank" rel="noopener">
       多様な受取方法等の普及促進事業|国土交通省​
     </a>
   </p>
-    </section>
+
+</section>    
 
     <!-- Problem Section -->
     <section class="section section-graygradation" id = "problem">
