--- a/index.html
+++ b/index.html
@@ -177,12 +177,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <section class="section maininfo">
 
-  <!-- ▼ここにロゴ列を戻す -->
-  <div class="maininfo-logos">
-    <img src="./img/mlit_logo.png" alt="国土交通省ロゴ" class="logo-mlit">
-    <img src="./img/hand.png" alt="つながりイラスト" class="logo-hand">
-    <img src="./img/toriiku_logo.png" alt="トリイクロゴ" class="logo-toriiku">
-  </div>
+  <div class="bannerwrapper">
+  <img src="./img/kokudo.png" alt="国土交通省">
+  <img src="./img/shakehand.png" alt="握手" class="shakehandimg">
+  <img src="./img/toriiku.png" alt="トリイク">
+</div>
 
   <h3 class="orangetxt">国土交通省と共に開発した<br class="spbr">“トリイク”が、<br class="spbr">この問題を解決します!!*</h3>
 
