--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="intro2026__bottom">
       <div class="intro2026__bottomTitle">空室対策 ＝ 宅配インフラの整備。</div>
       <p class="intro2026__bottomText">
-        家賃を下げる前に、入居者が去る「原因」を断つ。それが、資産価値を守る唯一の道です。
+        家賃を下げる前に、入居者が去る「原因」を断つ。<br class="spbr">それが、資産価値を守る唯一の道です。
       </p>
     </div>
 
