--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <section class="section section-graygradation" id = "problem">
             <div class="section-label-center">
                 <span class="section-label">PROBLEM</span>
-                <h2 class="section-title">物件の宅配設備の不足は<br>“トラブルや退去の火種”であり、<br class = "spbr">“入居忌避”の理由にも<span class="pconly">なります</span>。</h2>
+                <h2 class="section-title">物件の宅配設備の不足は<br>“トラブルや退去の火種”です。</h2>
             </div>
             
             
