--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </div>
             
-            <h3 class = "boxtext">このような状況を放っておくと空室が増え、</br>物件の資産価値の下落や賃料収入の低下に。<br>これは物件オーナーにとって重大な問題です。</h3>
+            <h3 class = "boxtext">放置すれば、空室増と収益悪化。</br>オーナーにとって回避すべき実損です。</h3>
             
     </section>
 
