--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
             </div>
 
-                 <h3 class="boxtext">宅配ボックスは高額な設置費用がかかる上、<br><br class = "spbr">満杯によるクレームや使いづらいなどの不満が積み重なり、物件への満足度が低下。<br>結果的に退去理由につながるケースも。<br><br>一方、トリイクはこれらの宅配ストレスを解消し、<br>さらにポイント付与もあり、住民満足度が上がるため空室率の低下が期待できます。</h3>
+                 <h3 class="boxtext">「高額・満杯・退去」の悪循環を、宅配ボックスで繰り返しますか？<br>トリイクなら、低コストで「宅配ストレス」を解消し、選ばれる物件へ変えます。</h3>
         
     </section>
 
