--- a/index.html
+++ b/index.html
@@ -149,20 +149,25 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <div class="intro2026__cards">
 
-      <!-- 配送現場の変化 -->
+     
       <article class="intro2026__card">
         <div class="intro2026__imgWrap">
-          <img src="./img/introduction1.png" alt="配送現場の変化">
+          <img src="./img/introduction1.png" alt="宅配ボックス高額">
         </div>
       </article>
 
-      <!-- 入居者の行動 -->
+  
       <article class="intro2026__card">
         <div class="intro2026__imgWrap">
-          <img src="./img/introduction2.png" alt="入居者の行動">
+          <img src="./img/introduction2.png" alt="工事は大変">
         </div>
       </article>
 
+      <article class="intro2026__card">
+ 　　 <div class="intro2026__imgWrap">
+    　<img src="./img/introduction3.png" alt="宅配ボックス">
+  　　</div>
+　　　</article>
     </div>
 
     <div class="intro2026__bottom">
