--- a/index.html
+++ b/index.html
@@ -163,14 +163,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
       </article>
 
-      <article class="intro2026__card">
- 　　 <div class="intro2026__imgWrap">
-    　<img src="./img/introduction3.png" alt="宅配ボックス">
-  　　</div>
-　　　</article>
-    </div>
-
+     <div class="intro2026__card">
+  <div class="intro2026__imgWrap">
+    <img src="./img/introduction3.png" alt="宅配ボックスがないと入居者に選ばれない">
   </div>
+ </div>
 </section>
 
 <section class="section maininfo">
