--- a/index.html
+++ b/index.html
@@ -163,11 +163,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
       </article>
 
-     <div class="intro2026__card">
-  <div class="intro2026__imgWrap">
-    <img src="./img/introduction3.png" alt="宅配ボックスがないと入居者に選ばれない">
+     <article class="intro2026__card">
+        <div class="intro2026__imgWrap">
+          <img src="./img/introduction3.png" alt="宅配ボックスがないと入居者に選ばれない">
   </div>
- </div>
+     </article>
+
 </section>
 
 <section class="section maininfo">
